--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3 class="ask">Getting hungry?</h3>
-        <p>Do you want to eat something sweet? Let talk and eat about it.</p>
+        <p>Let's eat and talk about it.</p>
         <a href="mailto:thepointcake@gmail.com" class="myButton"> CONTACT ME </a>
       </div>
     </div>
