--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.instagram.com/thepointcake/?hl=en">Instagram</a>
       <a class="footer-link" href="https://www.facebook.com/thepointcake/">Facebook</a>
+      <a class="footer-link" href="https://www.youtube.com/channel/UC3zciv89ZbdYqiCDQYZES9w">Youtube</a>
       <p class="copyright">© 2020 Charrie Viaje.</p>
     </div>
 
