typo error.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="profile">
         <img class="charrie" src="images/Charrie Vi.png" alt="Charrie-img">
         <h2>Hello.</h2>
-        <p class="myself-description">I am a Web Developer and a Baker. I am co-founder of The Point Cake.</p>
+        <p class="myself-description">I am a Web Developer, a Baker and the co-founder of The Point Cake.</p>
       </div>
       <hr>
       <div class="skills">
@@ -33,7 +33,7 @@
         <div class="skill-row">
           <iframe src="https://giphy.com/embed/bkgwcaBQ28Nj3SP3Xb" width="200" height="200" frameBorder="0" class="bake" allowFullScreen></iframe>
           <h3>Baking cakes and cupcakes.</h3>
-          <p class="bake-description">I am deeply in love making and baking pastries. It started when we went to this french bakery and my sister introduced me with different kinds of pastries. And currently I am mastering the art of French Macaron.</p>
+          <p class="bake-description">I am deeply in love making and baking pastries. It started when we went to this french bakery and my sister introduced me with different kinds of pastries. And currently, I am mastering the art of French Macaron.</p>
         </div>
       </div>
       <hr>
@@ -41,7 +41,7 @@
         <h2>Get In Touch</h2>
         <h3 class="ask">Getting hungry?</h3>
         <p>Let's eat and talk about it.</p>
-        <a href="mailto:thepointcake@gmail.com" class="myButton"> CONTACT ME </a>
+        <a href="mailto:chocojavascript@gmail.com" class="myButton"> CONTACT ME </a>
       </div>
     </div>
 
